cabecalho, logo e pagina 3 com estilos

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,4 +12,5 @@
 @import '../components/csPage/cs.scss';
 @import '../components/CodeBox/prism-custom-theme.scss';
 @import '../components/CodeBox/code-box.scss';
+@import'../components/Cabecalho/cabecalho.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
