--- a/components/ListaConteudos/ListaConteudo.scss
+++ b/components/ListaConteudos/ListaConteudo.scss
@@ -1,10 +1,11 @@
 *{font-family: 'Poppins';}
 
 .card {
-    width: 250px;
+    
+    max-width: 100%;
     height: 290px;
     border-radius: 15px;
-    background: rgb(27, 26, 26);
+    background: #19191b;
     color: white;
     font-weight: 600;
     font-size: 1.2em;
@@ -23,8 +24,10 @@
     cursor: pointer;
   }
   
- 
+  .selected {
+    color: #3bd423 /* Define a cor que você deseja para os itens selecionados */
+  }
   
   .element:hover {
-    color: #3775bb;
+    color: #3bd423;
   }
