--- a/components/csPage/cs.scss
+++ b/components/csPage/cs.scss
@@ -9,26 +9,30 @@
     .navbar {
         
         width: 20%;
+        max-width: 20%;
         display: flex;
         flex-direction: column;
-        background: rgb(27, 26, 26);
+        background: #19191b;
         height: 100%;
-        margin: 0px;
+       margin-top: 100px;
+        position: fixed;
+        
     }
     
     .conteudoContainer {
+       
         color: white;
         width:80%;
-       
+       padding-left: 20%;
         justify-content: center;
-        margin-top: 50px;
+        margin-top: 105px;
         display: flex;
        
        
 
         .conteudo {
             width: 80%;
-            background:#444654 ;
+            background:#121212 ;
             border-radius: 7px;
             display: flex;
             flex-direction: column;
@@ -40,6 +44,15 @@
                 font-size: 20px;
                 text-align: center;
                 margin-top: 15px;
+                color: #3bd423                
+            }
+
+            strong {
+                color: #3bd423
+            }
+
+            h2 {
+                color: #25cbd3;
             }
             @import 'prismjs/themes/prism-solarizeddark.css';
         }
