refatoramento com variaves de cor e componente de usuario no cabecalho

--- a/components/Cabecalho/cabecalho.scss
+++ b/components/Cabecalho/cabecalho.scss
@@ -1,15 +1,18 @@
 .cabecalhoContainer {
-    background-color: black;
+    background-color: $preto;
     width: 100%;
     position: fixed;
     z-index: 2  ;
-    border-bottom: 2px solid #3bd423;
+    border-bottom: 2px solid $verde;
     display: flex;
     justify-content: center;
     top: 0;
+    align-items: center;
+    height: fit-content;
     .imgContainer {
         display: flex;
         align-items: center;
+        text-align: center;
         img {
         width: 150px;
         height: 94px;
@@ -18,4 +21,18 @@
     }
     }
     
+    .cabecalhoUsuarioContainer {
+  
+  position: absolute;
+   right: 3%;
+   top: 50%;
+   height: auto;
+   transform: translate(-3%, -50%);
+   
+   
+    
+ }
+
 }
+
+
