--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@import './variaveis.scss';
 *{
     font-size: 14px;
   }
@@ -13,4 +14,5 @@
 @import '../components/CodeBox/prism-custom-theme.scss';
 @import '../components/CodeBox/code-box.scss';
 @import'../components/Cabecalho/cabecalho.scss';
+@import '../components/CabecalhoUsuario/cabecalhoUsuario.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
