--- a/components/Home/home.scss
+++ b/components/Home/home.scss
@@ -1,8 +1,8 @@
-body { background: #121212;}
+body { background: $cinzaEscuro;}
 header {
     display: inline;
     font-family: 'Poppins', sans-serif;
-    color: white;
+    color: $branco;
     h1 {
        
         font-size: 30px;
