Componente de Editor Input para Codigo usando monaco

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,4 +15,5 @@
 @import '../components/CodeBox/code-box.scss';
 @import'../components/Cabecalho/cabecalho.scss';
 @import '../components/CabecalhoUsuario/cabecalhoUsuario.scss';
+@import '../components/InputCodigo/inputCodigo.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
