--- a/components/CabecalhoUsuario/cabecalhoUsuario.scss
+++ b/components/CabecalhoUsuario/cabecalhoUsuario.scss
@@ -34,6 +34,7 @@
                 }
                 p {
                     margin: 1px;
+                    text-align: center;
                 }
     
             }
