--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,4 +16,8 @@
 @import'../components/Cabecalho/cabecalho.scss';
 @import '../components/CabecalhoUsuario/cabecalhoUsuario.scss';
 @import '../components/InputCodigo/inputCodigo.scss';
+@import '../components/CabecalhoNav/cabecalhonav.scss';
+@import '../components/linguagensLista/linguagensLista.scss';
+@import '../components/PageConteudos/PageConteudos.scss';
+@import '../components/CardBasico/CardBasico.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
