--- a/components/Home/home.scss
+++ b/components/Home/home.scss
@@ -42,7 +42,8 @@ body {
                 width: fit-content;
                 padding: 15px 18px;
                 border-radius: 12px;
-                height: 400px;
+                min-height: 400px;
+                height: fit-content;
                 display: inline-flex;
                 flex-direction: column;
                 justify-content: center;
@@ -110,6 +111,7 @@ body {
             .comoFuncionaBox {
                 display: flex;
                 gap: 25px;
+                margin: 0 25px;
 
                 .item {
                     padding: 50px;
