--- a/components/csPage/cs.scss
+++ b/components/csPage/cs.scss
@@ -14,8 +14,9 @@
         flex-direction: column;
         background: $cinzaMedio;
         height: 100%;
-       margin-top: 100px;
         position: fixed;
+        border-radius: 5px;
+        border: 1px solid $preto;
         
     }
     
