--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@
     margin: 0;
   }
 
-@import '../components/home/home.scss';
+@import '../components/Home/home.scss';
 @import '../components/ListaConteudos/ListaConteudo.scss';
 @import '../components/csPage/cs.scss';
 @import '../components/CodeBox/prism-custom-theme.scss';
