--- a/components/LoginPage/login.scss
+++ b/components/LoginPage/login.scss
@@ -8,19 +8,17 @@ body.login {
     display: flex;
     flex-direction: column;
     height: 100%;
-    align-items: flex-end;
+    align-items: center;
     padding: 0px 32px;
 
 
     .loginContainer {
         border: 1px solid $verde;
-        width: fit-content;
-       
+        width: 500px;
         padding: 30px;
         border-radius: 12px;
-        margin-right: 12%;
-        margin-top: 8%;
         text-align: center;
+        margin-top: 100px;
 
         h1 {
             color: $branco;
@@ -51,6 +49,7 @@ body.login {
                border-bottom: 1px solid $verde;
                color:$verde;
                text-align: center;
+               width: 100%;
 
             }
             button {
@@ -65,6 +64,22 @@ body.login {
             }
         }
         
+        .botaoGoogle {
+
+            .S9gUrf-YoZ4jf {
+                display: flex;
+                justify-content: center;
+            }
+            iframe {
+                margin: 0px;
+            }
+        }
+
+        h2 {
+            color: $verde;
+            font-size: 21px;
+        }
+
     }
 
   }
