login Page refeite

--- a/components/LoginPage/login.scss
+++ b/components/LoginPage/login.scss
@@ -26,6 +26,13 @@ body.login {
             margin-bottom: 25px;
         }
 
+        p {
+            color: $branco;
+        }
+        strong {
+            color: $verde;
+        }
+
         form {
           
             border-radius: 14px;
