--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,4 +21,5 @@
 @import '../components/PageConteudos/PageConteudos.scss';
 @import '../components/CardBasico/CardBasico.scss';
 @import '../components/LoginPage/login.scss';
+@import '../components/LoginPage/loginForm.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
