--- a/components/LoginPage/loginForm.scss
+++ b/components/LoginPage/loginForm.scss
@@ -2,10 +2,10 @@
     display: grid;
     place-items: center;
     width: 300px;
-    height: 472px;
+    height: 350px;
     padding: 25px;
     background-color: #161616;
-    box-shadow: 0px 15px 40px #00FF7F;
+    box-shadow: 0px 5px 15px $verde;
     outline: 1px solid #2b9962;
     border-radius: 10px;
   }
@@ -25,7 +25,7 @@
   }
   
   #welcome-line-1 {
-    color: #00FF7F;
+    color: $verde;
     font-weight: 600;
     font-size: 40px;
   }
@@ -60,7 +60,7 @@
     width: 100%;
     background: none;
     font-size: 13.4px;
-    color: #00FF7F;
+    color: $verde;
     border: none;
     padding: 0;
     margin: 0;
@@ -77,14 +77,14 @@
   #submit-button {
     display: block;
     width: 100%;
-    color: #00FF7F;
+    color: $verde;
     background-color: transparent;
     font-weight: 600;
     font-size: 14px;
     margin: 0;
     padding: 14px 13px 12px 13px;
     border: 0;
-    outline: 1px solid #00FF7F;
+    outline: 1px solid $verde;
     border-radius: 8px;
     line-height: 1;
     cursor: pointer;
