--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,4 +22,5 @@
 @import '../components/CardBasico/CardBasico.scss';
 @import '../components/LoginPage/login.scss';
 @import '../components/LoginPage/loginForm.scss';
+@import'../components/cadastroPage/cadastro.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
