--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,4 +23,5 @@
 @import '../components/LoginPage/login.scss';
 @import '../components/LoginPage/loginForm.scss';
 @import'../components/cadastroPage/cadastro.scss';
+@import '../components/EsqueciASenha/esqueciASenha.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
