--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,7 @@
 @import '../components/ListaConteudos/ListaConteudo.scss';
 @import '../components/csPage/cs.scss';
 @import '../components/CodeBox/prism-custom-theme.scss';
+@import '../components/TituloDesafio/tituloDesafio.scss';
 @import '../components/CodeBox/code-box.scss';
 @import'../components/Cabecalho/cabecalho.scss';
 @import '../components/CabecalhoUsuario/cabecalhoUsuario.scss';
@@ -23,5 +24,6 @@
 @import '../components/LoginPage/login.scss';
 @import '../components/LoginPage/loginForm.scss';
 @import'../components/cadastroPage/cadastro.scss';
+@import'../components/PrecisaDeLogin/precisaDeLogin.scss';
 @import '../components/EsqueciASenha/esqueciASenha.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
