estilos de problema concluido, puxar dados da api para progresso, apenas estrutura

--- a/components/Cabecalho/cabecalho.scss
+++ b/components/Cabecalho/cabecalho.scss
@@ -22,13 +22,13 @@ header {
           align-items: center;
           text-align: center;
           
-          a {
+         
+          img {
             margin: auto;
             display: block;
-          }
-          img {
           width: 150px;
           height: 94px;
+          cursor: pointer;
           
       }
       }
