--- a/components/PageConteudos/PageConteudos.scss
+++ b/components/PageConteudos/PageConteudos.scss
@@ -69,13 +69,20 @@ h1.titulo2 {
                 color: $verde;
                 font-size: 20px;
             }
-            li {
-                color: $verde;
-                strong {
-
-                    font-size: 17px;
+            ul {
+                   height: 300px;
+                    margin-bottom: 20px;
+                li {
+                    color: $verde;
+                    
+                    strong {
+    
+                        font-size: 17px;
+                    }
                 }
             }
+
+        
             
             .botao{
                 display: flex;
@@ -83,6 +90,8 @@ h1.titulo2 {
                 padding: 0px;
                 justify-content: center;
                 width: 100%;
+                
+                
                 button {
                     cursor: pointer;
                     background-color: transparent;
@@ -91,6 +100,7 @@ h1.titulo2 {
                     padding: 30px;
                     font-size: 20px;
                     color: $azul;
+                    height: 150px;
                     width: 100%;
                     &:hover {
                         background-color: $azul;
