pagina de progresso continuada

--- a/styles/componentImports.scss
+++ b/styles/componentImports.scss
@@ -18,3 +18,5 @@
 @import '../components/EsqueciASenha/esqueciASenha.scss';
 @import '../components/problemaJaConcluido/problemaJaConcluido.scss';
 @import '../components/ProgressoPage/progressoPage.scss';
+@import '../components/Progresso/CabecalhoProgresso.scss';
+@import '../components/Progresso/RankCabecalgo.scss';
