--- a/components/ProgressoPage/progressoPage.scss
+++ b/components/ProgressoPage/progressoPage.scss
@@ -1,12 +1,9 @@
 .progressoContainer {
     margin: 0 auto;
-    text-align: center;
-    width: fit-content;
+    width: 80%;
     border: 1px solid $verde;
-    padding: 100px 200px;
+    padding: 30px 20px;
     border-radius: 15px;
     color: $branco;
-    img {
-        border-radius: 50px;
-    }
+   
 }
