progresso page feita

--- a/styles/componentImports.scss
+++ b/styles/componentImports.scss
@@ -20,3 +20,4 @@
 @import '../components/ProgressoPage/progressoPage.scss';
 @import '../components/Progresso/CabecalhoProgresso.scss';
 @import '../components/Progresso/RankCabecalgo.scss';
+@import '../components/Progresso/ProgressoLinguagens.scss';
