--- a/components/ProgressoPage/progressoPage.scss
+++ b/components/ProgressoPage/progressoPage.scss
@@ -5,5 +5,11 @@
     padding: 30px 20px;
     border-radius: 15px;
     color: $branco;
+
+    .parteDeBaixo {
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 250px;
+    }
    
 }
