--- a/components/ProgressoPage/progressoPage.scss
+++ b/components/ProgressoPage/progressoPage.scss
@@ -5,11 +5,21 @@
     padding: 30px 20px;
     border-radius: 15px;
     color: $branco;
+    padding-top: 10px;
 
     .parteDeBaixo {
+        border-top: 2px solid $verde;
         display: flex;
         justify-content: space-between;
         padding: 0px 250px;
+        gap: 105px;
     }
    
+}
+
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
 }
