pequena mudança no progresso e pagina de ranking iniciada

--- a/components/ProgressoPage/progressoPage.scss
+++ b/components/ProgressoPage/progressoPage.scss
@@ -10,9 +10,10 @@
     .parteDeBaixo {
         border-top: 2px solid $verde;
         display: flex;
-        justify-content: space-between;
-        padding: 0px 250px;
-        gap: 105px;
+        justify-content: center;
+        gap: 15vw;
+        padding: 0px 50px;
+        
     }
    
 }
