--- a/styles/componentImports.scss
+++ b/styles/componentImports.scss
@@ -21,3 +21,4 @@
 @import '../components/Progresso/CabecalhoProgresso.scss';
 @import '../components/Progresso/RankCabecalgo.scss';
 @import '../components/Progresso/ProgressoLinguagens.scss';
+@import '../components/RankingPage/rankingPage.scss';
