--- a/components/RankingPage/rankingPage.scss
+++ b/components/RankingPage/rankingPage.scss
@@ -45,6 +45,7 @@
         .userStats {
             display: flex;
             flex-direction: column;
+            text-align: end;
 
             p {
                 margin: 2px;
