--- a/components/RankingPage/rankingPage.scss
+++ b/components/RankingPage/rankingPage.scss
@@ -7,7 +7,8 @@
     background-color: $cinzaMedio;
     border-radius: 15px;
     width: 80vw;
-    border: 2px solid $branco;
+    border: 2px solid $cinzaEscuro;
+   padding-bottom: 150px;
 
     .usuarioLogado {
         background-color: $cinzaEscuro !important;
