--- a/components/CabecalhoUsuario/cabecalhoUsuario.scss
+++ b/components/CabecalhoUsuario/cabecalhoUsuario.scss
@@ -18,24 +18,34 @@
             border: 2px solid $verde;
             }
 
+
+            .nomeENivel {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                justify-content: center;
+                strong {
+                     font-size: 16px;
+                }
+               
+            }
+            strong.nome {
+                display: block;
+            }
+            strong.nivel {
+                text-align: center;
+                color: $verdeClaro;
+            }
+
             .textos {
-                progress {
-                    background-color: $cinzaEscuro;
-                    border: 2px solid $verde;
-                    
-                }
-    
-                progress::-webkit-progress-value {
-                    background: $verde;
-                }
-                
-                progress::-moz-progress-bar {
-                    background: $verde; /* Cor do preenchimento da barra de progresso (Mozilla) */
-                }
+               
                 p {
                     margin: 1px;
                     text-align: center;
                 }
+
+               
     
             }
 
