--- a/components/CabecalhoUsuario/cabecalhoUsuario.scss
+++ b/components/CabecalhoUsuario/cabecalhoUsuario.scss
@@ -1,6 +1,6 @@
 .cabecalhoUsuarioContainer {
     display: flex;
-    
+    padding-right: 50px;
     
     .informacoesUsuario {
        
@@ -79,5 +79,64 @@
         
     }
     }
+
+    .missaoDiariaContainer {   
+        button {
+                cursor: pointer; 
+                background-color: $cinzaMedio;
+                color: $verdeClaro;
+                border: 3px solid $verde;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                padding: 10px 5px;
+               
+              
+                border-radius: 10px;
+                
+                img {
+                    border: none;
+                    border-radius: 0%;
+                }
+            }
+    }   
+    
+    .streakFora {
+        text-align: center;
+        strong.titulo {
+            color: $verde;
+        }
+    }
+
+
+    .streakContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 22px;
+        height: 25px;
+        width: 25px;
+        position: relative;
+
+        .descricao {
+            position: absolute;
+            bottom: -160%;
+            background-color: $cinzaMedio;
+            padding: 15px;
+            border-radius: 15px;
+        }
+
+        img {
+            border: none;
+            width: 30px;
+            margin-bottom:5px ;
+
+        }
+        
+    }
+
     
 }
