--- a/components/CabecalhoUsuario/cabecalhoUsuario.scss
+++ b/components/CabecalhoUsuario/cabecalhoUsuario.scss
@@ -90,7 +90,8 @@
                 justify-content: center;
                 align-items: center;
                 text-align: center;
-                padding: 10px 5px;
+                padding: 5px 2px;
+               font-size: 12px;
                
               
                 border-radius: 10px;
@@ -98,6 +99,7 @@
                 img {
                     border: none;
                     border-radius: 0%;
+                    width: 40px;
                 }
             }
     }   
