--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,5 +8,6 @@
     margin: 0;
   }
 
+@import '../components/MissaoDiaria/missaoDiariaComponente.scss';
 @import './componentImports.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
