--- a/components/PageConteudos/PageConteudos.scss
+++ b/components/PageConteudos/PageConteudos.scss
@@ -106,6 +106,15 @@ h1.titulo2 {
                         background-color: $azul;
                         color: $branco;
                     }
+                    &.desabilitado {
+                        cursor: default;
+                        color: $cinza;
+                        border: 3px solid $cinza;
+                        &:hover {
+                            background-color: transparent;
+                            
+                        }
+                    }
                 }
             }
           
